Document Trino jvm.config requirements and drain stream in getTableSchema
Two diagnostics improvements from production deploy debugging:

* README: add a "Trino サーバ側の必須 JVM 設定" section spelling out the
  --sun-misc-unsafe-memory-access=allow and --add-opens flags that Arrow /
  Netty need on JDK 24. Without them the first metadata RPC fails with
  "FlightRuntimeException: Failed to read message" whose root cause is
  "sun.misc.Unsafe or DirectByteBuffer.<init>(long, int) not available".
  Also note the ADBC FlightSqlConnection per-Location client cache leak
  warning as harmless log noise.

* FlightSqlClient.getTableSchema: switch from executePartitioned to
  executeQuery + explicit drain. executePartitioned hands back partition
  descriptors we never read, leaving the Flight response data dangling in
  ADBC's per-Location FlightSqlClient cache; the drained executeQuery
  path consumes the (empty) stream end-to-end so the underlying
  FlightClient releases its buffers.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>